--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="col">
                 <h3>Our Campsite</h3>
-                <p>Explore our growing database of curate campsites and leave your own review!</p>
+                <p class="d-none d-sm-block">Explore our growing database of curate campsites and leave your own review!</p>
             </div>
             
         </section>
@@ -50,7 +50,7 @@
             </div>
             <div class="col">
                 <h3>React Lake Campground</h3>
-                <P>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</P>
+                <P class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</P>
             </div>
          </section>
 
@@ -61,7 +61,7 @@
             </div>
             <div class="col">
                 <h3>Bootstrap Outfitters</h3>
-            <p>Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+            <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
             </div>
             
          </Section>
@@ -76,7 +76,7 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Sites</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
