--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                     <li class="nav-item"><a class="nav-link" href=#><i class="fa-solid fa-list"></i> Sites </a></li>
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa-solid fa-address-card fa-lg"></i> Contact  </a></li>
                 </ul>
+                <span class="navbar-text ms-auto">
+                    <a role="button" data-bs-toggle="modal" data-bs-target="#loginModal">
+                        <i class="fa-solid fa-right-to-bracket"></i>Login
+                    </a>
+                </apan>
             </div>
         </div>        
     </nav>
