--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/stryles.css" />
+    <link rel="stylesheet" href="css/styles.scss" />
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css"/>
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/brands.css"/>
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/solid.css"/>   
@@ -102,8 +102,8 @@
     <div class="modal" id="reserveModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <div class="modal-header bg-info text-white">
-                    <h5 class="modal-title">Reserve a Campsite</h5>
+                <div class="modal-header">
+                    <h3 class="modal-title">Reserve a Campsite</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -225,7 +225,7 @@
          </section>
 
          <!--partner section-->
-         <Section class="row row-content align-items-center" >
+        <Section class="row row-content align-items-center" >
             <div class= "col-sm-4 col-md-3 order-sm-last">
                 <h2 class="text-sm-end">Our Community Partners</h2>
             </div>
@@ -238,6 +238,22 @@
                 </div>
             </div>
         </Section>
+        <!--Campsite Reviews-->
+        <section class="row row-content align-item-start review-section mb-3">
+            <div class="col-sm-4 col-md-3 order-sm-first">
+                <h2 class="text-sm-end">What Happy Campers Are Saying?</h2>
+            </div>
+            <div class="col ms-lg-5">
+                <img class="img-thumbnail img-fluid" src="img/happy-campers.jpg" alt="Happy campers">
+            </div>
+            <div class="col">
+                <h3>So Worth It!</h3>
+                <p>"We had a blast as we embarked on a wild adventure amidst nature's embrace, where s'mores and laughter under starlit skies became our daily ritual, creating memories that will last us forever."</p>
+            </div>
+            <div class="d-flex justify-content-center mt-5">
+                <button class="campsite-btn" data-bs-toggle="modal" data-bs-target="#reserveModal">Reserve Campsite</button>
+            </div>
+        </section>
 
       </main>
 
